--- a/agency-app-django/requirements.txt
+++ b/agency-app-django/requirements.txt
@@ -1,11 +1,26 @@
 asgiref==3.3.4
+certifi==2021.10.8
+charset-normalizer==2.0.9
+coreapi==2.3.3
+coreschema==0.0.4
 Django==3.2.4
 django-ckeditor==6.1.0
 django-crispy-forms==1.12.0
 django-jazzmin==2.4.8
 django-js-asset==1.2.2
+djangorestframework==3.13.1
+djangorestframework-simplejwt==5.0.0
 gunicorn==20.1.0
+idna==3.3
+itypes==1.2.0
+Jinja2==3.0.3
+MarkupSafe==2.0.1
 Pillow==8.2.0
+PyJWT==2.3.0
 pytz==2021.1
+PyYAML==6.0
+requests==2.26.0
 sqlparse==0.4.1
+uritemplate==4.1.1
+urllib3==1.26.7
 whitenoise==5.3.0
