--- a/agency-app-django/requirements.txt
+++ b/agency-app-django/requirements.txt
@@ -7,6 +7,7 @@ Django==3.2.4
 django-ckeditor==6.1.0
 django-crispy-forms==1.12.0
 django-currentuser==0.5.3
+django-filter==21.1
 django-jazzmin==2.4.8
 django-js-asset==1.2.2
 djangorestframework==3.13.1
